objects/A_DX_Object__c.object
<CustomObject>
    <fields>
        <fullName>A_New_Text_Field__c</fullName>
        <description>My Description is here</description>
        <externalId>true</externalId>
        <inlineHelpText>My Help Text is here</inlineHelpText>
        <label>A Nice Text Field</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>A_new_Date_Field__c</fullName>
        <label>A new Date Field</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Percent__c</fullName>
        <label>Additional Percent</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_text__c</fullName>
        <description>More stuff</description>
        <inlineHelpText>and Help</inlineHelpText>
        <label>test_text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Date_Field__c</fullName>
        <label>New Date Field</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>checktest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>checktest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>glob_picky__c</fullName>
        <label>glob_picky</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>testing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>linkacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>A_DX_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>my_checktest__c</fullName>
        <businessOwnerUser>billnewss88@mz.com</businessOwnerUser>
        <complianceGroup>HIPAA;GDPR</complianceGroup>
        <defaultValue>true</defaultValue>
        <description>new description</description>
        <inlineHelpText>new help text</inlineHelpText>
        <label>checktest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>myfield__c</fullName>
        <label>myfield</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newone__c</fullName>
        <label>newone</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parentabc__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>always require</description>
        <label>parentabc</label>
        <referenceTo>parentabc__c</referenceTo>
        <relationshipName>requiredparent</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>required_example__c</fullName>
        <label>required_example</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_formula__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>test formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zelastone__c</fullName>
        <complianceGroup>HIPAA;PCI;COPPA</complianceGroup>
        <description>Description here</description>
        <inlineHelpText>and help text</inlineHelpText>
        <label>zelastone</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>bad_label</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Test_Queue_A_DX_Object</fullName>
        <filterScope>Queue</filterScope>
        <label>Test Queue</label>
        <queue>Test_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>A DX Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>A DX Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>